Added waffle recipe

--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -13,7 +13,24 @@
             <p>Perfect fluffy homemade waffles with a great taste!</p>
         <h2>Ingredients</h2>
             <ul>
-                <li></li>
+                <li>2 eggs</li>
+                <li>2 cups of milk</li>
+                <li>1/2 cup vegetable oil</li>
+                <li>2 cups all-purpose flour</li>
+                <li>3 tablespoons white sugar</li>
+                <li>1 tablespoon ground cinnamon</li>
+                <li>1 tablespoon ground nutmeg</li>
+                <li>3 tablespoons baking powder</li>
+                <li>1 teaspoon salt</li>
             </ul>
+        <h2>Directions</h2>
+            <ol>
+                <li>Preheat a waffle iron according to manufacturer's instructions.</li>
+                <li>Whisk eggs together in a large bowl until fluffy. Mix in 2 cups milk, vegetable oil, and vanilla extract until combined.</li>
+                <li>Combine 2 cups flour, sugar, cinnamon, nutmeg, baking powder, and salt in a separate bowl. Slowly pour flour mixture into egg mixture, stirring as you pour.
+                     Mix until few to no lumps remain, being careful not to overmix. Add more flour if batter is too thin, or more milk if batter is too sticky or thick.</li>
+                <li>Ladle some of the batter onto the preheated waffle iron. Cook until waffle is golden brown and the iron stops steaming, 
+                    2 to 5 minutes. Repeat with remaining batter.</li>
+            </ol>
 </body>
 </html>
