Added waffles and brownies webpages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
-        <li></li>
-        <l></li>
+        <li><a href="./recipes/brownies.html">Brownies Recipe</a></li>
+        <li><a href="./recipes/waffles.html">Waffles Recipe</li>
     </ul>
     <img src="./img/chef.jpeg" alt="Chef holding a pizza">
 </body>
