--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
-        <li><a href="./recipes/brownies.html">Brownies Recipe</a></li>
-        <li><a href="./recipes/waffles.html">Waffles Recipe</li>
+        <li class="link"><a href="./recipes/pizza.html">Pizza Recipe</a></li>
+        <li class="link"><a href="./recipes/brownies.html">Brownies Recipe</a></li>
+        <li class="link"><a href="./recipes/waffles.html">Waffles Recipe</li>
     </ul>
     <img src="./img/chef.jpeg" alt="Chef holding a pizza">
 </body>
